--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -28,12 +28,14 @@ body {
 }
 
 
-a {
+footer ul a {
   text-decoration: none;
   text-emphasis: none;
   font-style: normal;
   font-size: .8em;
   font-weight: 600;
+  color: #06365f;
+  text-transform: uppercase;
 }
 
 .allInfo{
@@ -68,10 +70,17 @@ header {
 
 .homeLogo {
  padding: 5px 10px;
- background-image: url("/lab-css-instagram-clone/starter-code/images/bgtile.png");
+ background-image: linear-gradient(to bottom  , #357db8, #266296);
  border: solid #1c5380 2px;
+ border-radius: 3px;
  align-items: center;
+}
 
+.homeLogo{
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: .9em;
 }
 
 article{
@@ -105,9 +114,7 @@ ul{
   justify-content: center;
   list-style-type: none;
   padding-top: 50px;
-  color: #06365f;
   text-decoration: none;
-
   font-weight: 600;
 }
 
@@ -122,6 +129,8 @@ ul p {
   font-weight: bold;
   font-size: 0.8em;
   color: lightslategrey;
+  text-transform: uppercase;
+
 }
 
 h1{
