--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,62 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  margin: 0;
+  padding:  0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+.todo{
+  margin: 100px;
+  display: flex;
+}
+header{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+}
+.texto{
+  margin: 0 50px;
+}
+.info{
+  height: 100%;
+  background-image: url("../images/frame.png");
+  background-size: 100%;
+  background-repeat:no-repeat;
+  padding-top: 50px;
+  padding-left: 100px; 
+  padding-right: 100px;
+  padding-bottom: 20px;
+  font-size: 1.3rem;
+}
+.apple{
+  padding-top:50px;
+}
+h2{
+  color: #06365f;
+}
+footer{
+  text-align: center;
+}
+a{
+  color:#06365f;
+  text-decoration: none;
+  margin: 0 10px;
+}
+.boton{
+  padding:10px 10px;
+  display: flex;
+  align-items: center;
+background-color: #5689b3;
+color: white;
+border-radius: 10px;
+background: linear-gradient(to top,#5689b3, rgb(204, 230, 241) );
+}
+.white{
+  color: white;
 }
