--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,129 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	width: 100vw;
+	height: 100vh;
+	/* overflow-x: hidden;
+	overflow-y: hidden; */
+}
+/*General container*/
+.wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	position: relative;
+	flex-direction: column;
+}
+/*Background of the container*/
+.wrapper::after {
+	content: '';
+	position: absolute;
+	z-index: 0;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 30%;
+	background-color: #497195;
+}
+
+.container {
+	display: flex;
+	z-index: 1;
+	position: relative;
+	width: 65%;
+	height: 75%;
+}
+
+.left-side {
+	width: 40%;
+	height: 100%;
+	text-align: center;
+}
+
+.phone-image {
+	height: 100%;
+}
+
+.right-side {
+	width: 60%;
+	height: 100%;
+}
+
+.header-right {
+	display: flex;
+	justify-content: space-between;
+	height: 17%;
+}
+
+.logo {
+	height: 100%;
+}
+
+button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 80px;
+	height: 45px;
+	padding: 3px;
+	margin-top: 10px;
+	border: none;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.75);
+	background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(73, 113, 149, 1) 100%);
+}
+
+.content {
+	width: 100%;
+	height: 83%;
+	background-color: #fff;
+	padding: 20px;
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
+	box-shadow: 0px -2px 13px -6px rgba(0, 0, 0, 0.75);
+}
+
+.text {
+	width: 100%;
+	height: 87%;
+}
+
+.store-images {
+	width: 80%;
+	height: 13%;
+	display: flex;
+	justify-content: center;
+}
+
+footer {
+	padding-top: 30px;
+	color: #497195;
+	font-weight: bold;
+}
+
+ul {
+	display: flex;
+}
+
+ul li {
+	list-style: none;
+}
+
+li:not(:last-child) {
+	margin-right: 10px;
+}
+
+h2 {
+	font-size: 30px;
+	color: #497195;
 }
