--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,51 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 100px 5% 0 5%;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.container-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.container-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.phones {
+  margin: 50px;
+}
+
+.right-side {
+  margin: 50px;
+}
+
+.text-background {
+  background-color: white;
+  box-shadow: lightslategrey;
+  padding: 5%;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+footer ul li {
+  color: #1c5380;
+  list-style: none;
+}
+
+footer ul li a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+.copyright {
+  color: lightslategray;
 }
