--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,50 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+footer{
+  display: flex;
+  justify-content: space-between;
+  margin: 25px;
+
+}
+
+footer ul {
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul{
+  display: flex;
+}
+
+#primary{
+  display: flex;
+  justify-content: center;
+}
+
+
+.container{
+  margin-top: 100px;
+  width: 460px;
+}
+
+#head{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.button{
+  height: 50px;
+  text-align: center;
+}
+
+#paragraph{
+  background-color: white;
 }
