--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,28 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  flex-direction: column;
+  margin: 0px 100px;
+  justify-content: space-evenly;
+}
+
+#main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+#content {
+  width: 700px;
+}
+
+
+
+footer {
+  display: flex;
+  align-items: baseline;
+	align-content: stretch;
 }
