--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,33 @@ light blue: #1c5380
 */
 
 body {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 0px 100px;
+}
+
+#main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+#phoneImage {
+  background-image: url(../images/phones.png);
+  background-repeat: no-repeat;
+}
+
+#content {
+  width: 700px
+}
+
+footer {
+  display: flex;
+  align-items: flex-end;
+
 }
