--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,97 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+h1{
+  color: #33597a;
+}
+
+
+.main-section {
+  justify-content: center;
+  flex-direction: row; 
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+
+  margin-top: 70px;
+
+}
+
+.left-section {
+
+}
+
+.right-section {
+  width: 500px;
+  margin-left: 30px;
+}
+
+.header-section{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  align-items: center;
+}
+
+.right-white{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 5%;
+  border-radius: 5px;
+}
+
+.right-white img{
+  margin-right: 10px;
+}
+
+
+.button {
+  background-color:#33597a;
+  border: 1px solid #0f283d;
+  border-radius: 3px;
+  height: 42px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button:hover{
+  background-color:#1d4263;
+}
+
+.button img{
+  width: 20px;
+  margin-right: 4px;
+}
+
+
+.footer {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+ul{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+ul>li {
+  list-style-type: none;
+  padding: 10px;
+  color: #a5a3a3;
+  font-size: 12px;
+}
+
+li >a {
+  font-weight: 550;
+  color: #33597a;
 }
