--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,20 @@ light blue: #1c5380
 */
 
 body {
+  
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  Background-repeat: repeat-x;
+}
+
+.entire-div {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+.rightSide {
+  width: 500px;
 }
