--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,85 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  
 }
+main{
+  display: flex;
+  justify-content: center;
+  padding: 100px;
+  flex-wrap: wrap;
+}
+#text{
+  width: 500px;
+  padding: 50px;
+}
+#brand{
+display: flex;
+justify-content: space-between;
+margin: 0;
+align-items: center;
+flex-wrap: wrap;
+}
+
+button{
+  height: 40px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 700;
+  color: white;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  border: 1px solid #06365f;
+}
+@media (max-width: 400px){
+  button{
+    color: red;
+  }
+}
+#main-text{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  padding: 10px 30px;
+  flex-wrap: wrap;
+}
+h1{
+  color: #06365f;
+}
+footer{
+  padding-bottom: 30px;
+  margin-bottom: 30px; 
+  font-size: 16px;  
+  }
+ 
+ 
+ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-decoration: none;
+  list-style: none;
+  flex-wrap: wrap;
+
+}
+li{
+  padding: 10px;
+  font-weight: 600;
+  color: rgba(var(--fe0,0,53,105),1);
+}
+
+#copy{
+  font-weight: 700;
+  font-style: normal;
+  color: lightgray
+}
+
+em{
+  font-style: normal;
+  font-weight: 400;
+}
+  
+
